# bevy_vrm1

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: look_at_cursor.rs  look_at_target.rs  multiple_lights.rs  multiple_vrma.rs  simple.rs  spring_bone.rs  vrma.rs
src/: error.rs  lib.rs  macros.rs  system_param.rs  system_set.rs  vrm.rs  vrma.rs
src/system_param/: cameras.rs  child_searcher.rs  vrm_animation_players.rs
src/vrm/: expressions.rs  gltf.rs  humanoid_bone.rs  loader.rs  look_at.rs  mtoon.rs  mtoon.wgsl  mtoon_fragment.wgsl  mtoon_types.wgsl  mtoon_vertex.wgsl  spawn.rs  spring_bone.rs
src/vrm/extensions/: vrmc_vrm.rs
src/vrm/gltf/: extensions.rs  materials.rs
src/vrm/gltf/extensions/: vrmc_spring_bone.rs  vrmc_vrm.rs
src/vrm/humanoid_bone/: bones.rs
src/vrm/mtoon/: material.rs  outline.rs  outline.wgsl  outline_pass.rs  setup.rs
src/vrm/mtoon/material/: outline.rs  rim_lighting.rs  shade.rs  uv_animation.rs
src/vrm/mtoon/outline/: pipeline.rs  render_command.rs
src/vrm/mtoon/outline_pass/: phase_item.rs  pipeline.rs  render_command.rs  view_node.rs
src/vrm/spring_bone/: attach.rs  registry.rs  setup.rs  update.rs
src/vrma/: animation.rs  extensions.rs  loader.rs  retarget.rs  spawn.rs
src/vrma/animation/: play.rs  setup.rs
src/vrma/gltf/: extensions.rs
src/vrma/retarget/: bone.rs  expressions.rs
