[package]
name = "bevy_vrm1"
version = "0.1.0"
edition = "2021"
authors = ["notelm <elmprograminfo@gmail.com>"]
repository = "https://github.com/not-elm/bevy_vrm1"
keywords = ["bevy", "game", "vrm", "vrma"]
categories = ["games"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_render",
    "bevy_window",
    "bevy_asset",
    "bevy_gltf",
    "animation",
    "bevy_log"
] }
serde = "1"
serde_json = "1"
anyhow = "1"
bitflags = { version = "2.9" }
nonmax = "0.5.5"

[dev-dependencies]
bevy = { version = "0.16.0" }
bevy_panorbit_camera = "0.26.0"

[lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"

[features]
default = []
reflect = ["bevy/serialize"]
develop = []

#[lints.rust]
#missing_docs = "warn"